syntax = "proto3";

import "google/protobuf/empty.proto";

option go_package = "/user";

service User {
    rpc GetUserList (PageInfo) returns (UserListResponse);
    rpc GetUserByMobile (MobileRequest) returns (UserInfoResponse);
    rpc GetUserById (IdRequest) returns (UserInfoResponse);
    rpc CreateUser (CreateUserRequest) returns (UserInfoResponse);
    rpc UpdateUser (UpdateUserRequest) returns (google.protobuf.Empty);
    rpc CheckPassword (PasswordCheckRequest) returns (PasswordCheckResponse);
}

message PageInfo {
    uint32 page_num = 1;
    uint32 page_size = 2;
}

message MobileRequest {
    string mobile = 1;
}
message IdRequest {
    uint64 id = 1;
}


message CreateUserRequest {
    string nickname = 1;
    string password = 2;
    string mobile = 3;
    enum Gender {NOT_KNOW = 0;MALE = 1;FEMALE = 2;}
    optional Gender gender = 4;
    uint64 birth_day = 5;
}
message UpdateUserRequest {
    uint64 id = 1;
    string nickname = 2;
    enum Gender {NOT_KNOW = 0;MALE = 1;FEMALE = 2;}
    optional Gender gender = 3;
    uint64 birth_day = 4;
}

message PasswordCheckRequest {
    string password = 1;
    string encrypted_password = 2;
}

message UserInfoResponse {
    int32 id = 1;
    string password = 2;
    string mobile = 3;
    string nike_name = 4;
    uint64 birth_day = 5;
    enum Gender {NOT_KNOW = 0;MALE = 1;FEMALE = 2;}
    optional Gender gender = 6;
    uint64 role = 7;
}

message UserListResponse {
    int64 total = 1;
    repeated UserInfoResponse data = 2;
}


message PasswordCheckResponse {
    bool success = 1;
}


